# AstraChess

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: AstraChess  CMakeCache.txt  Makefile  cmake_install.cmake
chess-engine/src/: Board.cpp  Board.h  Engine.cpp  Engine.h  Move.cpp  Move.h  Multiplayer.cpp  Multiplayer.h  Piece.h  Tiles.h  main.cpp  movesetExpression.h
chess-engine/src/minimalserverc++formultiplayerimplementation/: mainserver.cpp
chess-engine/src/pieceMoveset/: pawnMoveset.cpp
chess-engine/src/pieceMoveset/bishop/: bishopMoveset.cpp  bishopMoveset.h
chess-engine/src/pieceMoveset/king/: kingMoveset.cpp  kingMoveset.h
chess-engine/src/pieceMoveset/knight/: knightMoveset.cpp  knightMoveset.h
chess-engine/src/pieceMoveset/pawn/: pawnMoveset.cpp  pawnMoveset.h
chess-engine/src/pieceMoveset/queen/: queenMoveset.cpp  queenMoveset.h
chess-engine/src/pieceMoveset/rook/: rookMoveset.cpp  rookMoveset.h
chess-engine/tests/: board_rules_test.cpp
